[package]
name = "nmptm"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33.3"
eframe = "0.33.3"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"